feat: added full folder support; ui is terrible but whatever
also reworked paths for dashboard
and some other minor fixes

--- a/data/templates/editTrack.jet.html
+++ b/data/templates/editTrack.jet.html
@@ -56,7 +56,7 @@
 	        }).then(response => {
 	            spinner.classList.add('visually-hidden')
 	            if (response.response.status === 200) {
-	                window.location = '/'
+	                window.location = '/dashboard/tracks'
 	                return
 	            }
 	            if (response.response.status === 404) {
