--- a/data/templates/layout/head.jet.html
+++ b/data/templates/layout/head.jet.html
@@ -1,4 +1,5 @@
 <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 <link href="/static/css/fa-all.min.css" rel="stylesheet">
+<link href="/static/css/main.css" rel="stylesheet">
 
 <script src="/static/js/bootstrap.bundle.min.js"></script>
