--- a/data/templates/layout/nav.jet.html
+++ b/data/templates/layout/nav.jet.html
@@ -10,13 +10,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/auth/logout">Logout</a>
+                    <a class="nav-link" href="/dashboard/tracks">Dashboard</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/metrics">Metrics</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/auth/logout">Logout</a>
                 </li>
             </ul>
         </div>
